--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1865,7 +1865,7 @@ input, select, textarea {
 		.fade-in {
 			opacity: 0;
 			animation: fadeIn ease 5s;
-			animation-delay: 5s;
+			animation-delay: .5s;
 			animation-fill-mode: forwards;
 		}
 		@keyframes fadeIn {
